# amsdal-glue

./: .editorconfig  .gitignore  CONTRIBUTING.md  NOTICE.txt  README.md  release.sh
libs/amsdal-glue/: README.md  change-logs.md  latest-changelogs.md  pyproject.toml
libs/amsdal-glue/release_notes/: cqrs.added.md  imports-optimization.added.md  lakehouse.added.md  live-check.added.md  pipelines.added.md
libs/amsdal-glue/src/amsdal_glue/: __init__.py  executors.py  initialize.py  interfaces.py  planners.py  tasks.py
libs/amsdal-glue/src/amsdal_glue/applications/: cqrs.py  lakehouse.py
libs/amsdal-glue/src/amsdal_glue/commands/planner/: data_planner.py  lock_planner.py  schema_planner.py  transaction_planner.py
libs/amsdal-glue/src/amsdal_glue/commands/tasks/: data_mutation_tasks.py  lock_tasks.py  schema_mutation_tasks.py  transaction_tasks.py
libs/amsdal-glue/src/amsdal_glue/connections/: connection_manager.py  connection_pool.py
libs/amsdal-glue/src/amsdal_glue/cqrs/: initialize.py
libs/amsdal-glue/src/amsdal_glue/cqrs/services/: data_command.py
libs/amsdal-glue/src/amsdal_glue/managers/: executor_manager.py  runtime_manager.py
libs/amsdal-glue/src/amsdal_glue/pipelines/: containers.py  manager.py
libs/amsdal-glue/src/amsdal_glue/pipelines/services/: router_mixin.py
libs/amsdal-glue/src/amsdal_glue/queries/: polars_operator_constructor.py
libs/amsdal-glue/src/amsdal_glue/services/: __init__.py  data_command.py  data_query.py  lock_command.py  schema_command.py  schema_query.py  transaction_command.py
libs/amsdal-glue/src/amsdal_glue/task_executors/: background_executors.py  parallel_process_executor.py  parallel_thread_executor.py  sequential_sync_executor.py
libs/amsdal-glue/tests/: test_data_command_execute.py  test_data_command_services.py  test_data_query_service.py  test_lock_execute.py  test_lock_service.py  test_query_execute.py  test_schema_command_execute.py  test_schema_command_service.py  test_schema_query_execute.py  test_schema_query_service.py  test_transaction_execute.py  test_transaction_service.py  tools.py
libs/amsdal-glue/tests/integration/: test_cqrs.py  test_data_command_execute.py  test_data_command_services.py  test_data_query_service.py  test_etl.py  test_join_and_aggregate_subquery.py  test_lakehouse.py  test_lock_execute.py  test_lock_service.py  test_query_execute.py  test_schema_command_execute.py  test_schema_command_service.py  test_schema_query_execute.py  test_schema_query_service.py  test_transaction_execute.py  test_transaction_service.py
libs/amsdal-glue/tests/integration/aio_sqlite/: test_cqrs.py  test_data_command_execute.py  test_data_command_services.py  test_data_query_service.py  test_etl.py  test_join_and_aggregate_subquery.py  test_lakehouse.py  test_lock_execute.py  test_lock_service.py  test_query_execute.py  test_schema_command_execute.py  test_schema_command_service.py  test_schema_query_execute.py  test_schema_query_service.py  test_schema_query_service_references.py  test_transaction_execute.py  test_transaction_service.py
libs/amsdal-glue/tests/integration/csv/: test_etl.py
libs/amsdal-glue/tests/integration/es_integration/: test_query_execute.py  test_schema_command_execute.py  test_vector_query.py
libs/amsdal-glue/tests/integration/fixtures/: countries.sqlite  countries_map.sqlite
libs/amsdal-glue/tests/integration/postgresql/: test_query_execute.py  test_schema_command_execute.py  test_vector_query.py
libs/amsdal-glue/tests/integration/sqlite/: test_cqrs.py  test_data_command_execute.py  test_data_query_service.py  test_etl.py  test_join_and_aggregate_subquery.py  test_lakehouse.py  test_lock_execute.py  test_lock_service.py  test_query_execute.py  test_schema_command_execute.py  test_schema_command_service.py  test_schema_query_service.py  test_schema_query_service_references.py  test_transaction_execute.py
libs/api-server/: .gitignore  README.md  change-logs.md  latest-changelogs.md  pyproject.toml
libs/api-server/src/amsdal_glue_api_server/: app.py  routes.py
libs/api-server/tests/: conftest.py
libs/api-server/tests/operations/: test_data_mutations.py  test_query_commands.py  test_schema_mutations.py
libs/api-server/tests/rest/: test_create.py  test_delete.py  test_list.py  test_update.py
libs/api-server/tests/sql/: test_data_operations.py  test_query_commands.py  test_schema_mutations.py
libs/connections/: NOTICE.txt  README.md  change-logs.md  latest-changelogs.md  pyproject.toml
libs/connections/.claude/: settings.local.json
libs/connections/release_notes/: autocommit-true.changed.md  math-expressions.added.md  nested-types.added.md
libs/connections/src/amsdal_glue_connections/elasticsearch_connection/: sync_connection.py
libs/connections/src/amsdal_glue_connections/sql/: constants.py
libs/connections/tests/: test_build_command.py  test_build_query.py  test_build_schema_mutations.py
libs/connections/tests/csv/integration/: conftest.py  test_data_mutations.py  test_data_query.py  test_schema_mutation.py
libs/connections/tests/csv/testcases/: data_mutations.py  data_query.py  schema_mutations.py
libs/connections/tests/elasticseacrh/integration/: conftest.py  test_data_mutations.py  test_data_query.py  test_schema_mutation.py  test_table_info.py
libs/connections/tests/elasticseacrh/testcases/: data_mutations.py  data_query.py  schema_mutations.py
libs/connections/tests/sql/postgres/: conftest.py  test_data_mutations.py  test_data_query.py  test_schema_mutation.py  test_table_info.py  test_transaction_commands.py
libs/connections/tests/sql/postgres/unit/: conftest.py  (+3 more)
libs/sql-parser/: CONTRIBUTING.md  NOTICE.txt  README.md  change-logs.md  latest-changelogs.md  pyproject.toml
libs/sql-parser/src/amsdal_glue_sql_parser/parsers/: base.py  sqloxide_parser.py
libs/sql-parser/tests/: conftest.py  test_data_mutations.py  test_query_command.py  test_schema_operations.py  test_transaction_operations.py
libs/sql-parser/tests/sqloxide/: conftest.py  test_data_mutations.py  test_query_command.py  test_schema_operations.py  test_transaction_operations.py
(+235 files in other folders)
