[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amsdal_glue_connections"]

[project]
name = "amsdal-glue-connections"
dynamic = ["version"]
description = 'AMSDAL Glue connections implementation.'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = []
authors = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "amsdal-glue-core>=0.0.3",
]

[project.optional-dependencies]
postgres = [
    "psycopg[pool]>=3.2.1",
]
postgres-binary = [
    "psycopg[binary,pool]>=3.2.1",
]

[project.urls]
Documentation = "https://pypi.org/project/amsdal_glue_connections/#readme"
Issues = "https://pypi.org/project/amsdal_glue_connections/"
Source = "https://pypi.org/project/amsdal_glue_connections/"

[tool.hatch.version]
path = "src/amsdal_glue_connections/__about__.py"

[tool.hatch.envs.default]
path = "../../../.venv/connections"
extra-dependencies = [
    "mypy>=1.10.1",
    "coverage[toml]>=7.6",
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.5.2",
    "psycopg[binary,pool]>=3.2.1",
    "docker>=7.1.0"
]
pre-install-commands = [
    "pip install -e ../core/",
]

[tool.hatch.envs.default.scripts]
test = "pytest --benchmark-skip {args:tests}"
benchmark = "pytest --benchmark-only {args:tests}"
test-cov = "coverage run -m pytest --benchmark-skip {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
typing = "mypy --install-types --non-interactive {args:src/amsdal_glue_connections tests}"
style = [
    "ruff check {args:.}",
    "ruff format --preview {args:.}",
]
fmt = [
    "ruff format {args:.}",
    "ruff check --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T",
    "T10",
    "T20",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "ISC001",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**.py" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
source_pkgs = ["amsdal_glue_connections", "tests"]
branch = true
parallel = true
omit = [
    "src/amsdal_glue_connections/__about__.py",
]

[tool.coverage.paths]
amsdal_glue_connections = ["src/amsdal_glue_connections"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
